# AutoGrader

./: .gitignore  README.md  pyproject.toml
client/auto-grader-frontend/: package-lock.json  package.json
client/auto-grader-frontend/src/: App.js  styles.css
client/auto-grader-frontend/src/components/: FileUpload.js  ResultDisplay.js
client/auto-grader-frontend/src/services/: api.js
server/: main.py  pyproject.toml  requirements.txt
server/app/: main.py
server/app/model/: llm.ipynb  response.py
server/app/output/: grading_feedback.txt  grading_results.csv
server/app/static/: index.html
server/assets/: Marking-scheme.txt
