[project]
name = "autograder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.13",
    "flask>=3.1.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "nbformat>=5.10.4",
    "openai>=1.88.0",
    "pandas>=2.3.0",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.3",
    "zipfile36>=0.1.3",
]
